--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -262,25 +262,6 @@ body
                 }
             }
         }
-        
-        .content
-        {
-            @extend #ABSOLUTE, #NO-PADDING;
-            width: $full-width;
-            padding-left: 412px;
-            background: $dark;
-
-            .row
-            {
-                @extend #NO-MARGIN;
-                height: $full-height;
-            }
-
-            .area-msg
-            {
-                color: #000;
-            }
-        }
 
         .teto
         {
@@ -345,5 +326,62 @@ body
                 }
             }
         }   
+        
+        .content
+        {
+            @extend #ABSOLUTE, #NO-PADDING;
+            width: $full-width;
+            padding-left: 412px;
+            background: $dark;
+
+            .row
+            {
+                @extend #NO-MARGIN;
+                height: $full-height;
+            }
+
+            .col-area 
+            {
+                @extend #NO-PADDING;
+                height: $full-height;
+            }
+
+            .area-msg
+            {
+                .hd
+                {
+                    @extend #LEFT;
+                    width: $full-width; height: 64px;
+                    background: $light-silver;
+                    padding: 0 25px;
+
+                    h5.contact-data, span
+                    {
+                        font-size: 12px;
+                        color: $purple;
+                    }
+
+                    h5.contact-data
+                    {
+                        @extend #LEFT;
+                        line-height: 64px;
+                        font-weight: 600;
+
+                        i.favorite
+                        { color: $yellow; }
+
+                        span
+                        {
+                            font-weight: 300;   font-size: 10px;
+                            padding: 0 7px;    margin: 0 7px;
+                            border-left: solid 1px $dark-concrete;
+
+                            &:last-child
+                            { @extend #NO-MARGIN; }
+                        }
+                    }
+                }
+            }
+        }
     }
 }
