--- a/src/scss/settings/_colors.scss
+++ b/src/scss/settings/_colors.scss
@@ -7,6 +7,7 @@ $light-silver:      #F8F8F8;
 $silver:            #EEEEEE;
 $navy-silver:       #E5E5E5;
 $dark-silver:       #DEDEDE;
+$black-silver:      #D8D8D8;
 $dark:              #E4E4E4;
 $concrete:          #999999;
 $dark-concrete:     #666666;
